@@ -1,3 +1,8 @@
+Tue Sep 09 17:15:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/field_associations.py: Extend the test a bit
+	  further (it still passes!).
+
 Tue Sep 09 17:01:19 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/datastructures.py: Add optional "weight" member to Field:
